apps/jsonllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsonllm-service
  namespace: jsonllm
spec:
  selector:
    app: jsonllm
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
