apps/jsonllm/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonllm-ingress
  namespace: jsonllm
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "jsonllm.k8s.jeromeswannack.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsonllm-service
            port:
              number: 8000
